Creation of the StartupLoader